--- a/PedidosApi/PedidosApi.Aplicacion.Validadores/PedidosApi.Aplicacion.Validadores.csproj
+++ b/PedidosApi/PedidosApi.Aplicacion.Validadores/PedidosApi.Aplicacion.Validadores.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PedidosApi.Dominio.Dtos\PedidosApi.Dominio.Dtos.csproj" />
+  </ItemGroup>
+
 </Project>
