--- a/PedidosApi/PedidosApi.Aplicacion.Exceptions/PedidosApi.Aplicacion.Exceptions.csproj
+++ b/PedidosApi/PedidosApi.Aplicacion.Exceptions/PedidosApi.Aplicacion.Exceptions.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WatchDog.NET" Version="1.4.11" />
+  </ItemGroup>
+
 </Project>
