--- a/PedidosApi/PedidosApi.Dominio.Dtos/PedidosApi.Dominio.Dtos.csproj
+++ b/PedidosApi/PedidosApi.Dominio.Dtos/PedidosApi.Dominio.Dtos.csproj
@@ -20,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WatchDog.NET" Version="1.4.11" />
   </ItemGroup>
 
 </Project>
