--- a/PedidosApi/PedidosApi.Infraestructura.Repositorios/PedidosApi.Infraestructura.Repositorios.csproj
+++ b/PedidosApi/PedidosApi.Infraestructura.Repositorios/PedidosApi.Infraestructura.Repositorios.csproj
@@ -20,9 +20,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WatchDog.NET" Version="1.4.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PedidosApi.Aplicacion.Exceptions\PedidosApi.Aplicacion.Exceptions.csproj" />
     <ProjectReference Include="..\PedidosApi.Dominio.Interfaces\PedidosApi.Dominio.Interfaces.csproj" />
     <ProjectReference Include="..\PedidosApi.Dominio.Persistencia\PedidosApi.Dominio.Persistencia.csproj" />
   </ItemGroup>
